--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -122,6 +122,7 @@ $background-color: #fff;
     }
 
     .user-info__selection-wrap {
+      cursor: pointer;
       display: flex;
       flex-direction: column;
       row-gap: 15px;
