feat: add ExamQuestionService for generating exam questions and handle errors

--- a/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.html
+++ b/src/app/pages/teacher/exam/auto-generate/create-auto-generate/info/info.component.html
@@ -23,7 +23,7 @@
 
         <!-- Số lượng câu hỏi -->
         <div class="input-wrapper">
-          <label for="number_of_exam">Số lượng câu hỏi</label>
+          <label for="number_of_exam">Số đề</label>
           <input formControlName="number_of_exam" id="number_of_exam" />
           <div class="error-wrap">
             <div
@@ -65,7 +65,7 @@
         </div>
 
         <div class="input-wrapper">
-          <label for="exam_number_of_test">Số đề</label>
+          <label for="exam_number_of_test">Số lượng câu hỏi</label>
           <input
             formControlName="exam_number_of_test"
             id="exam_number_of_test"
