--- a/src/app/pages/teacher/exam-create-type/exam-create-type.component.html
+++ b/src/app/pages/teacher/exam-create-type/exam-create-type.component.html
@@ -15,17 +15,23 @@
         <div class="logo-text">Online Exam Portal</div>
         <nav class="breadcrumb-nav">
           <div class="breadcrumb-item">
-            <span class="breadcrumb-arrow">►</span>
+            <span class="breadcrumb-arrow">
+              <i class="fa-solid fa-play"></i>
+            </span>
             <span class="breadcrumb-text">Kỳ thi: {{ exam_session_name }}-{{ exam_session_description }}</span>
           </div>
           <div class="breadcrumb-item">
-            <span class="breadcrumb-arrow">►</span>
+            <span class="breadcrumb-arrow">
+              <i class="fa-solid fa-play"></i>
+            </span>
             <span class="breadcrumb-text">Tạo đề mới</span>
           </div>
         </nav>
       </div>
       <button class="return-btn" (click)="goBack()">
-        <span class="btn-icon">←</span>
+        <span class="btn-icon">
+          <i class="fa-solid fa-arrow-left"></i>
+        </span>
         <span class="btn-text">Quay lại</span>
       </button>
     </div>
@@ -53,7 +59,9 @@
           </div>
           <button class="action-btn primary-btn" (click)="navigateToAutoGenerate()">
             <span class="btn-text">Chọn</span>
-            <span class="btn-icon">→</span>
+            <span class="btn-icon">
+              <i class="fa-solid fa-arrow-right"></i>
+            </span>
           </button>
         </div>
         <div class="card-decoration"></div>
@@ -76,7 +84,9 @@
           </div>
           <button class="action-btn primary-btn" (click)="navigateToECWF()">
             <span class="btn-text">Bắt đầu</span>
-            <span class="btn-icon">→</span>
+            <span class="btn-icon">
+              <i class="fa-solid fa-arrow-right"></i>
+            </span>
           </button>
         </div>
         <div class="card-decoration"></div>
